// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

import "datatype.proto";

// The schema of a table, such as column data types and other meta info.
message DataSchema {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Fields in the table
  repeated DataField fields = 1;

  // Other optional table info
  map<string, string> metadata = 2;

  uint32 next_column_id = 3;
}

// Computed expression
message ComputedExpr {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  oneof computed_expr {
    string virtual  = 1;
    string stored   = 2;
  }
}

// AutoIncrement expression
message AutoIncrementExpr {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 start = 1;
  int64 step = 2;
  bool is_ordered = 3;
  // Used to concatenate AutoIncrementKey in `DefaultExprBinder::parse_and_bind`
  uint32 column_id = 4;
}

// One field, AKA column
message DataField {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The name of this column.
  string name = 1;

  // A SQL style expression to define the default value for this field,
  // represent as raw sql
  optional string default_expr = 2;

  // Column data type
  DataType data_type = 3;

  uint32 column_id = 4;

  optional ComputedExpr computed_expr = 5;

  optional AutoIncrementExpr auto_increment_expr = 6;
}
