// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The identifier of a database by name. Names can be changed.
// There is no guarantee that two get-database request by name will return the
// same instance.

syntax = "proto3";

package databend_proto;

import "datatype.proto";

// ProcedureMeta is a container of all non-identity information.
message ProcedureMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Procedure return type
  repeated DataType return_types = 4;

  // The time database created.
  string created_on = 10;

  // The time database updated.
  string updated_on = 11;

  // Comment about this database.
  string comment = 12;

  // Comment about this database.
  string script = 13;
  string language = 14;
}

// Save procedure name id list history.
message ProcedureIdList {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated uint64 ids = 1;
}
